// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class query can query in bulk 1`] = `
{
  "data": {
    "bulkClasses": [
      {
        "classId": "3500",
        "latestOccurrence": {
          "termId": "201930",
        },
        "name": "OOD",
        "subject": "CS",
      },
      {
        "classId": "2500",
        "latestOccurrence": {
          "termId": "201930",
        },
        "name": "Fundamentals of Computer Science 1",
        "subject": "CS",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`class query gets all occurrences 1`] = `
{
  "data": {
    "class": {
      "allOccurrences": [
        {
          "termId": "201930",
        },
        {
          "termId": "201830",
        },
      ],
      "name": "Fundamentals of Computer Science 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`class query gets latest occurrence 1`] = `
{
  "data": {
    "class": {
      "latestOccurrence": {
        "termId": "201930",
      },
      "name": "Fundamentals of Computer Science 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`class query gets specific occurrence 1`] = `
{
  "data": {
    "class": {
      "name": "Fundamentals of Computer Science 1",
      "occurrence": {
        "termId": "201930",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`class query gets the name of class from subject and classId 1`] = `
{
  "data": {
    "class": {
      "name": "Fundamentals of Computer Science 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`classByHash query gets class from class hash 1`] = `
{
  "data": {
    "classByHash": {
      "classId": "2500",
      "name": "Fundamentals of Computer Science 1",
      "subject": "CS",
      "termId": "201830",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`sectionByHash query gets section from section id 1`] = `
{
  "data": {
    "sectionByHash": {
      "campus": "Boston",
      "classId": "2500",
      "classType": "Lecture",
      "crn": "12345",
      "honors": false,
      "meetings": {},
      "seatsCapacity": 5,
      "seatsRemaining": 2,
      "subject": "CS",
      "termId": "201830",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
